# jsonata-rs

./: .gitignore  .gitmodules  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
crates/ast/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: builtins.rs  context.rs  evaluate.rs  lib.rs  value.rs
crates/hir/: Cargo.toml
crates/hir/src/: database.rs  lib.rs
crates/lang-core/: Cargo.toml
crates/parser/: Cargo.toml
crates/parser/src/: event.rs  expr.rs  lib.rs  marker.rs  parser.rs  sink.rs  source.rs
crates/syntax/: Cargo.toml
crates/syntax/src/: lib.rs  syntax_kind.rs
crates/tester/: Cargo.toml
jsonata/: Cargo.toml
jsonata-tester/: Cargo.toml
jsonata/src/: evaluate.rs  lexer.rs  lib.rs  parser.rs  tests.rs
jsonata/src/ast/: literal.rs  path.rs
jsonata/src/ast/dyadic/: compare.rs  concat.rs
jsonata/src/builtins/sequence/: mod.rs
jsonata/src/lexer/: mod.rs
jsonata/src/parser/: dyadic.rs  event.rs  expr.rs  marker.rs  mod.rs  sink.rs  string.rs
jsonata/src/syntax/: mod.rs
jsonata/src/value/: tests.rs
src/: ast.rs  evaluate.rs  lexer.rs  lib.rs  parser.rs  tests.rs
src/ast/: binary.rs  concat.rs  dyadic.rs  expr.rs  expression.rs  literal.rs  mod.rs  number.rs  path.rs  value.rs
src/ast/dyadic/: arithmetic.rs  mod.rs
src/builtins/: bool.rs  date.rs  mod.rs  numeric.rs  object.rs  sequence.rs  string.rs
src/parser/: binary.rs  concat.rs  dyadic.rs  expr.rs  ident.rs  literal.rs  mod.rs  monadic.rs  string.rs  tests.rs
src/value/: function.rs  mod.rs  number.rs  tests.rs
(+30 files in other folders)
