[package]
name = "jsonata"
version = "0.1.0"
authors = ["davimiku"]
repository = "https://github.com/davimiku/jsonata"
keywords = ["json", "jsonata", "parser"]
categories = ["parser-implementations", "compilers"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "6.2.1"
nom-recursive = "0.3"
nom_locate = "3.0"
rand = "0.8"
serde_json = "1"
