[package]
name = "jsonata"
version = "0.1.0"
authors = ["davimiku"]
repository = "https://github.com/davimiku/jsonata"
keywords = ["json", "jsonata", "parser"]
categories = ["parser-implementations", "compilers"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logos = "0.12.0"
num-derive = "0.3.3"
num-traits = "0.2.14"
rand = "0.8"
rowan = "0.15.0"
serde_json = "1"

[dev-dependencies]
expect-test = "1.1.0"
